@@ -5372,7 +5372,8 @@ Here is an example:
 string.
 </p>
 <p>After that you should run the command <code>./manage_i18n.pl</code> in the top
-directory, to add your new strings to all the files in the <tt>`i18n'</tt>
+directory, to add your new strings to the template file, that is the 
+file for english and to all the files in the <tt>`i18n'</tt>
 directory. This is achieved with
 </p>
 <table><tr><td>&nbsp;</td><td><pre class="example">./manage_i18n.pl template
